스크립트 수정
1. 엔딩추가
2. 돈, 빵 count 추가
등..

--- a/project_NoonSong/Assembly-CSharp.csproj
+++ b/project_NoonSong/Assembly-CSharp.csproj
@@ -44,6 +44,7 @@
      <Compile Include="Assets\Room\Script\TalkManager.cs" />
      <Compile Include="Assets\School\Script_School\Ending_School.cs" />
      <Compile Include="Assets\School\Script_School\MoveCamera.cs" />
+     <Compile Include="Assets\School\Script_School\Teleport_s.cs" />
     <Reference Include="UnityEngine">
         <HintPath>/Applications/Unity/Hub/Editor/2019.4.5f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
