Revert "엔딩이미지 전환"
This reverts commit 285631e2ac53989acc9abb5f2a5c49e8a657fcf3.

--- a/project_NoonSong/Assembly-CSharp.csproj
+++ b/project_NoonSong/Assembly-CSharp.csproj
@@ -59,7 +59,7 @@
      <Compile Include="Assets\Room\Script\Bubble.cs" />
      <Compile Include="Assets\Room\Script\BubblePlayerMove.cs" />
      <Compile Include="Assets\Room\Script\ChangeImg.cs" />
-     <Compile Include="Assets\Room\Script\Fadein.cs" />
+     <Compile Include="Assets\Room\Script\FadeOut.cs" />
      <Compile Include="Assets\Room\Script\GameManager.cs" />
      <Compile Include="Assets\Room\Script\MakeBubble.cs" />
      <Compile Include="Assets\Room\Script\ObjData.cs" />
